--- a/webapp/src/main/resources/templates/employees/selected-car-detail.html
+++ b/webapp/src/main/resources/templates/employees/selected-car-detail.html
@@ -9,47 +9,49 @@
     <div class="row">
         <div class="col-lg-12">
             <div id="orderControl" style="width: 100%; float: left; text-align: center;">
-                <a th:href="${'/employees/order-car?id=' + car.id}" class="form-control">Order Car</a>
+
+                <a th:href="${'/employees/order-car?id=' + car.id}" class="btn btn-primary form-control " th:text="#{selectcar.ordercar}">Order Car</a>
             </div>
             <div id="carDetails" style="width: 50%; float: left">
-                <h2>Car details</h2>
+                <h2>  <p th:text="#{car.details}" >Car details </p></h2>
 
-                <p>Brand: <span th:text="${car.brand}">brand</span></p>
+                <p th:text="#{car.brand} + ' :  ' +  ${car.brand}" > brand </p>
 
-                <p>Model: <span th:text="${car.model}">model</span></p>
+                <p th:text="#{car.model} + ' :  ' +  ${car.model}" > model </p>
 
-                <p>Category: <span th:text="${car.category}">category</span></p>
+                <p th:text="#{car.category} + ' :  ' +  ${car.category}" > category </p>
 
-                <p th:if="${car.category &lt; functionalLevelForLoggedInUser}">Upgrade amount: €<span th:text="${car.amountUpgrade}">amountUpgrade</span></p>
+                <p th:if="${car.category &gt; functionalLevelForLoggedInUser}" th:text="#{car.upgrade} + ' : €' +  ${car.amountUpgrade}"> amountUpgrade</p>
 
-                <p th:if="${car.category &gt; functionalLevelForLoggedInUser}">Downgrade amount: €<span th:text="${car.amountDowngrade}">amountDowngrade</span></p>
+                <p th:if="${car.category &lt; functionalLevelForLoggedInUser}" th:text="#{car.downgrade} + ' : €' +  ${car.amountDowngrade}"> amountDowngrade</p>
 
-                <p>Horse Power: <span th:text="${car.pk}">pk</span></p>
+                <p th:text="#{car.pk} + ' :  ' +  ${car.pk}" > pk </p>
 
-                <p>Fiscal Horse Power: <span th:text="${car.fiscalHP}">fiscalHp</span></p>
+                <p th:text="#{car.fiscalhp} + ' :  ' +  ${car.fiscalHP}" > fhp </p>
 
-                <p>Emission: <span th:text="${car.emission}">emission</span></p>
+                <p th:text="#{car.emission} + ' :  ' +  ${car.emission}" > emission </p>
 
-                <p>Fuel type: <span th:text="${car.fuelType}">fuelType</span></p>
+                <p th:text="#{car.fueltype} + ' :  ' +  ${car.fuelType}" > fuel type </p>
 
-                <p>Car type: <span th:text="${car.carType}">carType</span></p>
+                <p th:text="#{car.type} + ' :  ' +  ${car.carType}" > cartype </p>
 
-                <p>Delivery time: <span th:text="${car.deliveryTime}">carType</span> months</p>
+                <p th:text="#{car.deliverytime} + ' :  ' +  ${car.deliveryTime}" > delivery time </p>
 
-                <p>Ideal km: <span th:text="${car.idealKm}">idealKm</span></p>
+                <p th:text="#{car.idealkm} + ' :  ' +  ${car.idealKm}" > ideal km </p>
 
-                <p>Max km: <span th:text="${car.maxKm}">maxKm</span></p>
+                <p th:text="#{car.maxkm} + ' :  ' +  ${car.maxKm}" > maxkm </p>
+                <p th:text="#{car.price} + ' :  ' +  ${car.listPrice}" > listprice </p>
 
-                <p>List price: €<span th:text="${car.listPrice}">listPrice</span></p>
+                <p th:text="#{car.benefit} + ' :  ' +  ${car.benefit}" > benefit </p>
 
-                <p>Benefit: €<span th:text="${car.benefit}">benefit</span></p>
             </div>
             <div id="basePackDetails" style="width: 50%; float: right">
                 <h2> </h2>
-                <h3>Base Pack</h3>
+                <h3 th:text="#{car.basepack}">Base Pack</h3>
                 <h4 th:text="${car.basePack.name}">basePackName</h4>
-                <p>price: €<span th:text="${car.basePack.price}">basePackPrice</span></p>
-                <h5>Options:</h5>
+                <p th:text="#{car.price} + ' : € ' +  ${car.basePack.price}" > basepackprice </p>
+
+                <h5><p th:text="#{car.options} + ' :  '" > caropitons </p></h5>
                 <ul>
                 <li th:each="option : ${car.basePack.carOptions}">
                     <h6 th:text="${option.name}"></h6>
@@ -58,7 +60,7 @@
                 </ul>
             </div>
             <div id="pictures" style="width: 100%; float: left">
-                <h3>Pictures</h3>
+                <h3><p th:text="#{car.pictures}" > pictures </p></h3>
                 <a th:each="imgLink : ${car.pictures}" th:href="${imgLink}">
                     <img th:src="${imgLink}" height="400" width="500" class="img-thumbnail"/>
                 </a>
