--- a/webapp/src/main/resources/templates/fleet/allow-order.html
+++ b/webapp/src/main/resources/templates/fleet/allow-order.html
@@ -14,25 +14,26 @@
     <div class="row">
         <div class="col-lg-12">
             <div id="allowByEmail">
-                <h2>Allow Ordering Car</h2>
+                <h2><p th:text="#{order.allow}"> Allow Ordering Car </p></h2>
                 <form method="post" th:action="@{allow-order}">
                     <p th:if="${emailNotFound}">
-                        No employee found for the given email.
+                    <p th:text="#{order.nomailfound}"> No employee found for the given email. </p>
                     </p>
-                    Give in email:
+                    <p th:text="#{order.givemail}">  Give in email </p>
                     <input type="text" id="email" name="email" class="form-control"/>
-                    <input type="submit" class="form-control" value="Allow Order"/>
+                    <button type="submit" class="btn btn-primary form-control"><p th:text="#{order.alloworder}"> Allow Order  </p> </button>
+
                 </form>
             </div>
-            <h2>Employees That Need New Car</h2>
-            <p th:if="${usersThatNeedPermission.isEmpty()}">No employees that meet the criteria to order a new car.</p>
+            <h2>  <p th:text="#{order.employeesneednewcar}">  Employees That Need New Car </p> </h2>
+            <p th:if="${usersThatNeedPermission.isEmpty()}"> <p th:text="#{order.nocriteriareached}"> No employees that meet the criteria to order a new car.</p>  </p>
             <div id="allowUsersThatMeetCriteria" th:if="${!usersThatNeedPermission.isEmpty()}">
-                These employees meet one or more criteria and need to order a new car.
+                <p th:text="#{order.criteriareached}">  These employees meet one or more criteria and need to order a new car. </p>
                <table class="table" id="employeesTable">
                    <thead>
-                   <th>Name</th>
-                   <th>Email</th>
-                   <th>Allow</th>
+                   <th><p th:text="#{employee.name}"> name </p></th>
+                   <th><p th:text="#{employee.mail}"> email </p></th>
+                   <th><p th:text="#{employee.allow}"> Allow </p></th>
                    </thead>
                    <tbody>
                     <tr th:each="employee : ${usersThatNeedPermission}">
@@ -41,7 +42,8 @@
                         <td>
                             <form method="post" th:action="@{allow-order}">
                                 <input type="hidden" name="email" th:value="${employee.email}"/>
-                                <input type="submit" class="form-control" value="Allow Order"/>
+                                <button type="submit" class="btn btn-primary form-control"><p th:text="#{order.alloworder}"> Allow Order  </p> </button>
+
                             </form>
                         </td>
                     </tr>
