--- a/webapp/src/main/resources/templates/fleet/confirm-order.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order.html
@@ -14,20 +14,20 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <H2>Orders To Confirm</H2>
-            <p th:if="${ordersToConfirm.isEmpty()}">No orders to confirm.</p>
+            <H2 th:text="#{confirm.ordersto}">Orders To Confirm</H2>
+            <p th:if="${ordersToConfirm.isEmpty()}" th:text="#{confirm.noorders}">No orders to confirm.</p>
             <table class="table" th:if="${!ordersToConfirm.isEmpty()}" id="orderTable">
                 <thead>
-                <th>Employee</th>
-                <th>Ordered On</th>
-                <th>Confirm Order</th>
+                <th th:text="#{confirm.employee}">Employee</th>
+                <th th:text="#{confirm.orderedon}">Ordered On</th>
+                <th th:text="#{confirm.order}">Confirm Order</th>
                 </thead>
                 <tbody>
                 <tr th:each="carUsage : ${ordersToConfirm}">
                     <td th:text="${carUsage.employeeName}">employeeName</td>
                     <td th:text="${carUsage.orderDate}">orderDate</td>
                     <td style="text-align: center;">
-                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="form-control">Confirm Order</a>
+                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="form-control" th:text="#{confirm.order}">Confirm Order</a>
                     </td>
                 </tr>
                 </tbody>
