Ordering can now be disallowed, a placed order can now be disallowed

--- a/webapp/src/main/resources/templates/fleet/confirm-order-detail.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order-detail.html
@@ -11,10 +11,16 @@
         <div class="col-lg-12">
             <H2>Confirm Order</H2>
 
+            <form method="post" action="#" th:action="@{/fleet/disallow-order}">
+                <div id="disallowOrder">
+                    <input type="hidden" id="orderId" name="orderId" th:value="${confirmedOrderDTO.getOrderId()}"/>
+                    <input type="submit" value="Disallow Order" class="form-control"/>
+                </div>
+            </form>
             <form method="post" action="#" th:action="@{/fleet/confirm-order-detail}" th:object="${confirmedOrderDTO}">
                 <div id="control">
                     <input type="hidden" th:field="*{orderId}"/>
-                    <input type="submit" value="Save Changes And Confirm" class="form-control"/>
+                    <input type="submit" value="Confirm" class="form-control"/>
                 </div>
                 <div id="carDetails" style="width: 49%; float:left;">
                     <h3>Car Details</h3>
@@ -141,11 +147,11 @@
 
 <div th:replace="fragments/fragments :: div.scripts"></div>
 <script type="text/javascript">
-    $(function() {
-        $( "#datepicker" ).datepicker({ dateFormat: 'dd/mm/yy' });
+    $(function () {
+        $("#datepicker").datepicker({dateFormat: 'dd/mm/yy'});
     });
-    $(function() {
-        $( "#datepicker2" ).datepicker({ dateFormat: 'dd/mm/yy' });
+    $(function () {
+        $("#datepicker2").datepicker({dateFormat: 'dd/mm/yy'});
     });
 </script>
 </body>
