--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -35,8 +35,9 @@
                     <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Orders</li>
-                    <li><a th:href="@{/fleet/allow-order}">Allow Orders</a></li>
-                    <li><a th:href="@{/fleet/confirm-order}">Confirm Orders</a></li>
+                    <li><a th:href="@{/fleet/allow-order}">Allow Order</a></li>
+                    <li><a th:href="@{/fleet/disallow-ordering}">Disallow Ordering</a></li>
+                    <li><a th:href="@{/fleet/confirm-order}">Confirm/Disallow Orders</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Catalog</li>
                     <li><a th:href="@{/fleet/caroptions}">Options</a></li>
