--- a/webapp/src/main/resources/templates/fleet/confirm-order.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order.html
@@ -2,10 +2,10 @@
 <head th:replace="fragments/fragments :: head"></head>
 <body>
 <script type="text/javascript" charset="utf-8">
-    $(document).ready( function () {
+    $(document).ready(function () {
         $('#orderTable').dataTable().columnFilter();
 
-    } );
+    });
 </script>
 <div th:replace="fragments/fragments :: header"></div>
 
@@ -14,6 +14,20 @@
 
     <div class="row">
         <div class="col-lg-12">
+            <div th:if="${orderConfirmed != null}">
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    Order Confirmed
+                </div>
+            </div>
+            <div th:if="${orderDisallowed != null}">
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    Order Disallowed
+                </div>
+            </div>
             <H2>Orders To Confirm</H2>
             <p th:if="${ordersToConfirm.isEmpty()}">No orders to confirm.</p>
             <table class="table" th:if="${!ordersToConfirm.isEmpty()}" id="orderTable">
@@ -27,7 +41,8 @@
                     <td th:text="${carUsage.employeeName}">employeeName</td>
                     <td th:text="${carUsage.orderDate}">orderDate</td>
                     <td style="text-align: center;">
-                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="form-control">Confirm Order</a>
+                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="form-control">Confirm
+                            Order</a>
                     </td>
                 </tr>
                 </tbody>
