--- a/webapp/src/main/resources/templates/fleet/createpack.html
+++ b/webapp/src/main/resources/templates/fleet/createpack.html
@@ -18,35 +18,37 @@
         <div class="col-lg-12">
             <div>
 
-
+<div>
     <div style="float:left; width: 45%">
         <form method="POST" th:object="${pack}" action="/fleet/createpack">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
         <label th:for="${#ids.next('name')}"> <p th:text="#{pack.namem}">Name</p></label>
-        <input type="text" th:field="*{name}" />
+        <input type="text" th:field="*{name}" /> <br/>
         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
 
     <div th:class="${#fields.hasErrors('price')}? 'has-error'">
         <label th:for="${#ids.next('price')}"> <p th:text="#{pack.price}">Price</p></label>
-        <input type="text" th:field="*{price}" />
+        <input type="text" th:field="*{price}" /> <br/>
         <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
     </div>
         <button type="submit" class="btn btn-primary"><p th:text="#{pack.new}">add</p> </button>
 </form>
 
+
 </div>
+
                 <div style="float:left; width: 55%">
                 <form method="POST" th:object="${carOption}"  action="/fleet/createnewpackoption">
                     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                         <label th:for="${#ids.next('name')}"><p th:text="#{option.namem}">Name</p> </label>
-                        <input type="text" th:field="*{name}" />
-                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                        <input type="text" th:field="*{name}" /> <br/>
+                        <span th:if="${optionNameError}" th:text="#{option.namemissing}"></span>
                     </div>
 
                     <div th:class="${#fields.hasErrors('description')}? 'has-error'">
                         <label th:for="${#ids.next('description')}"> <p th:text="#{option.description}">Descriptin</p></label>
-                        <input type="text" th:field="*{description}" />
+                        <input type="text" th:field="*{description}" /> <br/>
                         <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
                     </div>
 
@@ -59,15 +61,17 @@
                     </div>
                 <br/>
                 <br/>
+    </div>
     <div>
-    <div style="float:left; width: 45%">
+    <div style="clear:both; float:left; width: 45%">
         <h1> <p th:text="#{pack.selectedoptions}">selecopt</p> </h1>
         <table>
             <tr th:each="caropt,idStat  : ${pack.carOptions}">
 
                 <td th:text="${caropt.name}"></td>
 
-                <td> <a th:href="${#mvc.url('PC#removeOption').arg(0, idStat.index).build()}" > <p th:text="#{pack.removeoption}">remove</p> </a> </td>
+                <td>  <a th:href="${'/fleet/removeoption?id=' + idStat.index}" class="btn btn-primary form-control" th:text="#{pack.removeoption}">Confirm Order</a> </td>
+
             </tr>
 
         </table>
@@ -102,14 +106,7 @@
 
             <td th:text="${caroption.description}"></td>
 
-
-
-            <td> <a th:href="${#mvc.url('PC#addOption').arg(0, caroption.id).build()}" ><p th:text="#{pack.addoptionto}"> Add </p> </a> </td>
-
-<!--
-            <td> <a th:onclick="'javascript:addInPack(\'' + ${caroption.id} + '\');'" > badd </a> </td>
--->
-
+           <td>  <a th:href="${'/fleet/addoptiontopack?id=' + caroption.id}" class="btn btn-primary form-control" th:text="#{pack.addoptionto}">Confirm Order</a> </td>
 
 
 
@@ -139,7 +136,11 @@
     </div>
     </div>
 
-
+<script>
+    function doClick(id){
+        alert(id);
+    }
+</script>
 
 
 
